--- a/index.html
+++ b/index.html
@@ -172,11 +172,12 @@
     </div>
 
     <!-- Dots -->
-    <div class="absolute right-6 top-1/2 transform -translate-y-1/2 flex flex-col gap-4 z-30">
-      <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="0"></button>
-      <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="1"></button>
-      <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="2"></button>
-    </div>
+    <div class="absolute right-6 top-1/2 max-md:top-[40%] transform -translate-y-1/2 flex flex-col gap-4 z-30">
+  <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="0"></button>
+  <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="1"></button>
+  <button class="dot w-3 h-3 max-md:w-2 max-md:h-2 rounded-full bg-white opacity-50" data-index="2"></button>
+</div>
+
   </section>
 </div>
 
