--- a/about.html
+++ b/about.html
@@ -50,8 +50,19 @@
 </head>
 
 <body class="relative text-gray-900 font-sans">
-   <div class="absolute inset-0 z-0">
-<img src="./static/images/contactbg.jpg" style="opacity: 0.05;" class="w-full h-full object-cover" />
+  <!-- Background Image Wrapper -->
+  <div class="absolute inset-0 z-0">
+    <!-- Background Image -->
+    <img 
+      src="./static/images/contactbg.jpg"
+      class="w-full h-full object-cover opacity-5 hidden md:block" 
+      alt="Background"
+    />
+
+    <!-- Repeating Pattern for Mobile -->
+    <div class="block md:hidden w-full h-full bg-repeat opacity-15" 
+         style="background-image: url('./static/images/contactbg.jpg'); background-size: 400px 400px;">
+    </div>
   </div>
 
 
