--- a/services2.html
+++ b/services2.html
@@ -57,10 +57,9 @@
       alt="Background"
     />
 
-    <!-- Repeating Pattern for Mobile -->
-    <div class="block md:hidden w-full h-full bg-repeat opacity-15" 
+    <!-- <div class="block md:hidden w-full h-full bg-repeat opacity-15" 
          style="background-image: url('./static/images/contactbg.jpg'); background-size: 400px 400px;">
-    </div>
+    </div> -->
   </div>
 
 <header  id="mainHeader" class="bg-transparent shadow-sm sticky top-0 z-50 w-full" style="position: fixed;">
