--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <div class="absolute inset-0 z-0">
     <img 
       src="./static/images/contactbg.jpg"
-      class="w-full h-full object-fill opacity-5 max-md:hidden block" 
+      class="w-full h-full object-cover opacity-[0.03] max-md:hidden block" 
       alt="Background"
     />
 
