--- a/services.html
+++ b/services.html
@@ -47,20 +47,19 @@
   </style>
 </head>
 
+
 <body class="relative text-gray-900 font-sans">
-  <!-- Background Image Wrapper -->
+ 
   <div class="absolute inset-0 z-0">
-    <!-- Background Image -->
     <img 
       src="./static/images/contactbg.jpg"
-      class="w-full h-full object-cover opacity-5 hidden md:block" 
+      class="w-full h-full object-cover opacity-[0.03] max-md:hidden block" 
       alt="Background"
     />
 
-    <!-- Repeating Pattern for Mobile -->
-    <div class="block md:hidden w-full h-full bg-repeat opacity-15" 
+    <!-- <div class="block md:hidden w-full h-full bg-repeat opacity-15" 
          style="background-image: url('./static/images/contactbg.jpg'); background-size: 400px 400px;">
-    </div>
+    </div> -->
   </div>
 
 <header  id="mainHeader" class="bg-transparent shadow-sm sticky top-0 z-50 w-full" style="position: fixed;">
