--- a/services2.html
+++ b/services2.html
@@ -47,12 +47,13 @@
   </style>
 </head>
 
+
 <body class="relative text-gray-900 font-sans">
  
   <div class="absolute inset-0 z-0">
     <img 
       src="./static/images/contactbg.jpg"
-      class="w-full h-full object-fill opacity-5 max-md:hidden block" 
+      class="w-full h-full object-cover opacity-[0.03] max-md:hidden block" 
       alt="Background"
     />
 
